# chip8-emulator-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: cpu.rs  lib.rs
src/audio/: mod.rs  sdl_audio.rs
src/cpu/: config.rs  mod.rs
src/input/: mod.rs  sdl_input.rs
src/video/: mod.rs  sdl_video.rs
